remove JDK 21 features and re-benchmark